# token-vae

./: .gitignore  LICENSE  README.md  pyproject.toml  research.md  run_validation.sh
scripts/: evaluate.py  prepare_data.py  reeval.sh  run_ablation.py  train_tokenizer.py  train_vae.py  visualize.py
src/token_vae/: __init__.py  losses.py  model.py
src/token_vae/evaluation/: __init__.py  config.py  report.py  tests.py  utils.py  visualizations.py
src/token_vae/training/: __init__.py  config.py  trainer.py
src/token_vae/utils/: __init__.py  pairs.py
tests/: __init__.py  test_losses.py  test_model.py  test_reproducibility.py  test_training.py
validation_results/: summary.md
validation_results/A_reproducibility/seed_123/: results.json
validation_results/A_reproducibility/seed_1337/: results.json
validation_results/A_reproducibility/seed_42/: results.json
validation_results/A_reproducibility/seed_456/: results.json
validation_results/A_reproducibility/seed_789/: results.json
validation_results/B_data_scale/fineweb_2M/: results.json
validation_results/B_data_scale/fineweb_4M/: results.json
validation_results/B_data_scale/fineweb_8M/: holdout_pairs.json  results.json
validation_results/C_vocab_scale/vocab_16k/: results.json
validation_results/C_vocab_scale/vocab_4k/: holdout_pairs.json  results.json
validation_results/C_vocab_scale/vocab_8k/: holdout_pairs.json  results.json
validation_results/D_ablations/: comparison.md
validation_results/D_ablations/baseline/: holdout_pairs.json  results.json
(+30 files in other folders)
